--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=test
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/testdb2
+spring.datasource.username=testuser2
+spring.datasource.password=helloworld
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# JPA Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
